# Changes to be committed: #	modified:   hypr/conf/keybinds.conf #	new file:   hypr/conf/window_rules.conf #	modified:   hypr/hyprland.conf #

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -41,5 +41,7 @@ source = ~/.config/hypr/conf/apps.conf
 # Source the file for look and feel settings
 source = ~/.config/hypr/conf/settings.conf
 
-# Source the file for keybindings and window rules
+# Source the file for keybindings 
 source = ~/.config/hypr/conf/keybinds.conf
+# Source the file for window rules
+source = ~/.config/hypr/conf/window_rule.conf
